Renamed attributes to clarify their purpose Renamed Directory to WorkingDirectory Renamed File to AppPath Renamed PID to PIDPath

--- a/config.json
+++ b/config.json
@@ -2,10 +2,10 @@
   "apps": {
     "http": {
       "name": "web server",
-      "directory": "/home/pablo/http",
-      "file": "httpd",
+      "working-directory": "/home/pablo/http",
+      "app-path": "httpd",
       "log-directory": "logs",
-      "pid": "app.pid"
+      "pid-path": "app.pid"
     }
   }
 }
