added services to config.json, also made a note of why the marshalled output is the way it is

--- a/config.json
+++ b/config.json
@@ -8,5 +8,14 @@
       "log-directory": "logs",
       "pid-path": "app.pid"
     }
+  },
+  "services": {
+    "ssh": {
+      "management": 1,
+      "name": "ssh",
+      "ignore-exit-codes": [
+        127
+      ]
+    }
   }
 }
