App and Service patrol config Key is now an ID now that is expected to be a valid hostname label (63 characters A-Za-z0-9, no start/ending -) IsAppServiceKey renamed to IsAppServiceID we will now check for duplicate IDs using a case insensitive compare since a key could be used as a hostname label renamed AppPath to Binary added logging to run services and apps functions

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "apps": {
     "http": {
       "keepalive": 1,
+      "binary": "http",
       "name": "web server",
       "working-directory": "/home/patrol/http",
       "app-path": "httpd",
@@ -12,6 +13,7 @@
   "services": {
     "ssh": {
       "management": 1,
+      "service": "ssh",
       "name": "ssh",
       "ignore-exit-codes": [
         127
