Added support for a HTML GUI our html GUI will display App and Service States and provide options to Toggle State, we also provide us a way to browse all of our files in our log directory, we also provide a way to view the current STDOut and STDErr if they were not overwritten with a custom io.Writer added http/ package to hold our GUI, this can be shared by multiple "patrol" clients if necessary added Name and Secret to API_Response - this does not return Secret, it returns a bool to inform us it's "protected" made GetStatus public, we use this for our http gui LastSeen will always be the current timestamp when our keepalive method is PID_PATROL fixed Config.Secret json attribute when Config.WorkingDirectory is prefixed with ~/ we will ATTEMPT to find our current users working directory, we then replace that as our prefix - this is the only time we support relative directories Patrol.Shutdown will now stop our ticker package patrol/ supports our new http gui and implements a http/udp listener for our api added a TODO in http/ for our paramater last - we want to limit returning the last x lines for STDOut/Err added String() to Timestamp

--- a/patrol/config.json
+++ b/patrol/config.json
@@ -1,11 +1,29 @@
 {
   "apps": {
-    "http": {
+    "testapp": {
       "keepalive": 1,
-      "binary": "http",
-      "name": "web server",
-      "working-directory": "/home/patrol/http",
-      "app-path": "httpd",
+      "name": "Test App",
+      "binary": "testapp",
+      "working-directory": "~/go/src/github.com/sabey/patrol/unittest/testapp/",
+      "log-directory": "logs",
+      "pid-path": "app.pid"
+    },
+    "fake": {
+      "keepalive": 3,
+      "disabled": true,
+      "name": "Fake App",
+      "binary": "testapp",
+      "working-directory": "~/go/src/github.com/sabey/patrol/unittest/testapp/",
+      "log-directory": "logs",
+      "pid-path": "app.pid"
+    },
+    "fake-secret": {
+      "keepalive": 4,
+      "disabled": true,
+      "secret": "secret",
+      "name": "Fake Secret App",
+      "binary": "testapp",
+      "working-directory": "~/go/src/github.com/sabey/patrol/unittest/testapp/",
       "log-directory": "logs",
       "pid-path": "app.pid"
     }
@@ -13,11 +31,24 @@
   "services": {
     "ssh": {
       "management": 1,
+      "name": "SSH",
       "service": "ssh",
-      "name": "ssh",
       "ignore-exit-codes": [
         127
       ]
+    },
+    "fake": {
+      "management": 1,
+      "disabled": true,
+      "name": "Fake Service",
+      "service": "fake"
+    },
+    "fake-secret": {
+      "management": 1,
+      "disabled": true,
+      "secret": "secret",
+      "name": "Fake Secret Service",
+      "service": "fake-secret"
     }
   }
 }
