added support for unittesting testserver - So far we are only testing APP_KEEPALIVE_HTTP unittests will not signal any processes on close or shutdown so we can test expected behavior added tests for all Triggers so that we know we're not caught in any deadlocks updated unittest timestamps to default to time.RFC3339 TestServerExecHTTP: we will now execute a testapp and testserver at the same time testserver will wait and see that testapp is alive, and wont execute testapp we will then signal testapp to exit testserver will then see that testapp exits and then will execute testapp to start we will then verify that testapp is running we then signal testserver to exit we then verify that testapp is STILL running without patrol

--- a/unittest/testserver/config-http.json
+++ b/unittest/testserver/config-http.json
@@ -1,13 +1,11 @@
 {
   "apps": {
-    "testapp": {
+    "http-testapp": {
       "keepalive": 3,
+      "name": "HTTP Test App",
       "binary": "testapp",
-      "name": "http test application",
       "working-directory": "testapp",
-      "log-directory": "logs",
-      "pid-path": "app.pid",
-      "disabled": true
+      "log-directory": "logs"
     }
   }
 }
